# dl-lightning-template

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  README.md  pyproject.toml
.github/: labels.yaml
.github/workflows/: format-on-pr.yaml  format-on-push.yaml  sync-labels.yaml  test.yaml
configs/: eval.yaml  train.yaml
configs/callbacks/: wandb.yaml
configs/data/: fashion_mnist.yaml
configs/debug/: default.yaml
configs/experiment/: example.yaml
configs/model/: fashion_mnist.yaml
configs/sweeper/: optuna.yaml
scripts/: setup.sh
src/: constants.py  eval.py  train.py
src/callbacks/: wandb.py
src/data/: fashion_mnist.py
src/models/: fashion_mnist.py  types.py
src/models/components/: cnn.py
src/utils/: __init__.py  hydra_resolvers.py  instantiators.py  ranked_logger.py  setup_environment.py  utils.py
tests/: conftest.py  test_eval.py  test_train.py
tests/data/: test_fashion_mnist.py
tests/models/: test_fashion_mnist.py
tests/models/components/: test_cnn.py
